--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -130,7 +130,7 @@ if necessary.
   \item \file{RJwrapper.pdf}
   \item \file{yourname.tex}
   \item \file{yourname.bib}
-  \item all necessary figure files
+  \item all necessary figure files (only PDF or PNG files are accepted)
   \item an R script permitting the reproduction of examples in your submission and small data files --- use built-in data sets where sensible, see below. 
   \item Do not include \file{RJournal.sty} or style files for other latex packages needed by your article.
   \end{itemize}
@@ -317,16 +317,18 @@ which will appear as $\log(x)$.
 delimiters in mathematical expressions in preference to bare delimiters:
 Do not write
 \begin{verbatim}
-\sum_{1=1}^{n}(X_{i}^{\prime} - 
+\sum_{i=1}^{n}(X_{i}^{\prime} - 
   \overline{X}^{\prime})^2
 \end{verbatim}
 which will be typeset as $\sum_{1=1}^{n}(X_{i}^{\prime} - \overline{X}^{\prime})^2$,
 but rather
 \begin{verbatim}
-\sum_{1=1}^{n}\left(X_{i}^{\prime} - 
+\sum_{i=1}^{n}\left(X_{i}^{\prime} - 
   \overline{X}^{\prime}\right)^2
 \end{verbatim}
-which will appear as $\sum_{1=1}^{n}\left(X_{i}^{\prime} - \overline{X}^{\prime}\right)^2$.
+which will appear as $\sum_{i=1}^{n}\left(X_{i}^{\prime} - \overline{X}^{\prime}\right)^2$.
+
+Try to stick to symbols from amssymb and avoid alternative symbol fonts.
 
 \end{itemize}
 
@@ -352,21 +354,25 @@ Down &  3 & 4 \\
 A simple table with booktabs formatting.}
 \end{table}
 
+Figures should be submitted as PDF or PNG format files; other formats are not accepted.
+
 Variants of the figure and table environments that span the full width of the document are avialable: these are called \verb|widefigure| and \verb|widetable|.  Figures~\ref{fig:regular} and \ref{fig:wide} show the difference between the regular and wide figure variants.
 
 \begin{figure}[htbp]
-  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}%
-  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.png}%
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.png}
   \caption{This figure should be the same width as the text.}
   \label{fig:regular}
 \end{figure}
 
 \begin{widefigure}[htbp]
-  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}%
-  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.png}%
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.png}
   \caption{This figure should span the page, but the caption should be the same width as the text. Use this environment sparingly}
   \label{fig:wide}
 \end{widefigure}
+
+For structuring a figure into subfigures, use the subcaption package.
 
 \section{References}
 \label{sec:references}
