--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -218,9 +218,14 @@ indicates a Bioconductor package, and includes a hyper-link to
 the corresponding page on the Bioconductor web site. For example,
 \verb|\BIOpkg{affy}| is typeset as \BIOpkg{affy}.
 
+\item[\code{$\backslash$ \\ctv}]
+indicates a CRAN Task View, and includes a hyper-link to
+the corresponding page on CRAN. For example,
+\verb|\ctv{Optimization}| is typeset as \ctv{Optimization}.
+
 \item[\code{$\backslash$ \\url}] indicates a URL.
-For example,\\ \verb|\url{http://cran.r-project.org/}| is typeset
-as \url{http://cran.r-project.org/}.
+For example,\\ \verb|\url{https://cran.r-project.org/}| is typeset
+as \url{https://cran.r-project.org/}.
 
 \end{description}
 
