--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -5,9 +5,23 @@
 {% assign lbrace = '{' %}
 {% assign rbrace = '}' %}
 
-{% for issue in site.issues %}{% for article in issue.articles %}{% if article.slug %}
+{% for issue in site.issues %}
+  {% for article in issue.articles %}
+    {% if article.landing %}
+@article{{lbrace}}{{article.slug}},
+  author = {{lbrace}}{% for authline in article.bibauthor %}{{ authline }}{% endfor %}{{rbrace}},
+  title = {{lbrace}}{{lbrace}}{% for titline in article.bibtitle %}{{ titline }}{% endfor %}{{rbrace}}{{rbrace}},
+  year = {{lbrace}}{{article.landing}}{{rbrace}},
+  journal = {{lbrace}}{{lbrace}}The R Journal{{rbrace}}{{rbrace}},
+  url = {{lbrace}}https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}{% if article.pages %},
+  pages = {{lbrace}}{{ article.pages | join: "--"}}{{rbrace}},
+  volume = {{lbrace}}{{ issue.volume }}{{rbrace}},
+  number = {{lbrace}}{{ issue.num }}{{rbrace}}{% endif %}
+}
+    {% else %}
+      {% if article.slug %}
 
-{% if issue.volume <= 4%}
+        {% if issue.volume <= 4%}
 @Article{RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
 {% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
 {% if article.bibtitle %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
@@ -19,7 +33,7 @@
   month        = {{issue.bibmonth}},
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
-{% else %}
+        {% else %}
 @Article{{lbrace}}{{article.slug}}:{{issue.year}},
 {% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
 {% if article.bibtitle %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
@@ -31,4 +45,8 @@
   month        = {{issue.bibmonth}},
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf}
 {{rbrace}}
-{% endif %}{% endif %}{% endfor %}{% endfor %}
+        {% endif %}
+      {% endif %}
+    {% endif %}
+  {% endfor %}
+{% endfor %}
