--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -16,7 +16,8 @@
   url = {{lbrace}}https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}{% if article.pages %},
   pages = {{lbrace}}{{ article.pages | join: "--"}}{{rbrace}},
   volume = {{lbrace}}{{ issue.volume }}{{rbrace}},
-  number = {{lbrace}}{{ issue.num }}{{rbrace}}{% endif %}
+  number = {{lbrace}}{{ issue.num }}{{rbrace}}{% else %}
+  note = {{lbrace}}Accepted, may change after copy-editing.{{rbrace}}{% endif %}
 }
     {% else %}
       {% if article.slug %}
