add practice of citing packages in bibliography

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -211,12 +211,16 @@ indicates an R package. For example,
 \item[\code{$\backslash$ \\CRANpkg}]
 indicates an R package on CRAN, and includes a hyper-link to the
 corresponding web page. For example,
-\verb|\CRANpkg{Rcpp}| is typeset as \CRANpkg{Rcpp}.
+\verb|\CRANpkg{Rcpp}| is typeset as \CRANpkg{Rcpp}. Such packages should 
+also be cited, for example by using the output of 
+\code{toBibtex(citation("Rcpp", auto=TRUE))}, and considering adding the
+output of \code{toBibtex(citation("Rcpp"))}.
 
 \item[\code{$\backslash$ \\BIOpkg}]
 indicates a Bioconductor package, and includes a hyper-link to
 the corresponding page on the Bioconductor web site. For example,
-\verb|\BIOpkg{affy}| is typeset as \BIOpkg{affy}.
+\verb|\BIOpkg{affy}| is typeset as \BIOpkg{affy}. Please also cite 
+Bioconductor packages in the bibliography.
 
 \item[\code{$\backslash$ \\ctv}]
 indicates a CRAN Task View, and includes a hyper-link to
@@ -435,7 +439,10 @@ protected with double braces:
 \begin{verbatim}
 AUTHOR = {{The R Journal Editors}}
 \end{verbatim}
-Including the DOI of the reference is very desirable and may become compulsory soon.
+Including the DOI of the reference is very desirable and may become 
+compulsory soon. It is good practice to cite CRAN and Bioconductor packages 
+mentioned in the article in the bibliography using \code{toBibtex(citation())} 
+to produce the required entry.
 
 \subsection{Citing packages}
 
@@ -447,7 +454,8 @@ package should use \verb|\BIOpkg|. Further citations use \verb|\pkg|
 and need not be followed by a citation.
 
 The BibTeX entry for an R package should not use the \verb|\pkg|
-command to format the package name in the \code{TITLE} field.
+command to format the package name in the \code{TITLE} field, but should 
+be produced using \code{toBibtex(citation())}.
 
 \subsection{Citing R}
 
@@ -494,6 +502,8 @@ prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
 \item v0.13 2013/08/27 --- Added \verb|\BIOpkg| for Bioconductor packages.
 
 \item v0.14 2017/01/09 --- Revised Introduction to adapt classes of solicited submissions to changing needs and high submission volumes of single package articles. Added hooks for licence and plagiarism.
+
+\item v0.15 2017/04/26 --- Added explicit need for citation of packages also in the bibliography.
 
 \end{itemize}
 
