--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -3,8 +3,8 @@
 \begin{document}
 
 \title{R Journal Proof-reading Check List}
-\author{by the R Journal Editorial Board}
-\date{27 August 2013}
+\author{by the R Journal Editors}
+\date{26 April 2017}
 \maketitle
 
 Your article has been accepted for publication in The R Journal. To
@@ -41,10 +41,13 @@ version to the handling editor.
   abstract) should be marked up with \verb+\CRANpkg+. This
   provides a hyper-link to the package homepage on CRAN. Similarly,
   the first mention of a Bioconductor package should be marked up with
-  \verb+\BIOpkg+.
+  \verb+\BIOpkg+. It is also reasonable to cite most such packages in the
+  bibliography.
 \item Other than the above, names of R packages should be marked up with 
   \verb+\pkg+, including in the title (This ensures that the
   package name is correctly formatted in the table of contents).
+\item It is reasonable to associate relevant text with CRAN Task Views using
+  the \verb+\ctv+ markup.
 \item Programming languages (including R), and other sofware
   (e.g. Stata, Matlab) do not have special markup but appear in the
   same font as the rest of the body text.
@@ -65,6 +68,9 @@ appearing in the text.  Class names should appear in double quotes.
 \section*{General LaTeX issues}
 
 \begin{itemize}
+\item As much as reasonably possible, avoid the use of extra LaTeX packages,
+  as these complicate the production of the journal, especially where different
+  articles make different choices purely for appearance.
 \item Put a trailing backslash -- \verb+.\+ -- after periods followed
   by a space that are not at the end of a sentence (when using e.g.,
   i.e., etc.).
@@ -79,6 +85,8 @@ appearing in the text.  Class names should appear in double quotes.
   \item Bold in figure captions,
   \item Use of \verb+\setlength{itemsep}+ to change vertical spacing
   \end{itemize}
+\item Use the subcaption package for subfigures, not subfigure nor
+  subfig.
 \end{itemize}
 
 \section*{Mathematics}
@@ -94,6 +102,8 @@ appearing in the text.  Class names should appear in double quotes.
   \item Use \verb+pmatrix+ for matrices, not \verb+array+
   \item Use \verb+align+ or \verb+alignat+ for stacked equations,
     not \verb+eqnarray+.
+  \item If at all possible, stick to symbols from ``amssymb'' and
+    avoid alternative symbol fonts.
   \end{itemize}
 \item In displayed formulae, use \verb+\left(+ and \verb+\right+, not
   \verb+(+ and \verb+)+ to ensure correct sizing of braces.
