--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -272,7 +272,8 @@ f <- function(y, debug = FALSE) {
 \subsection{Sectioning, titles, and abstract}
 
 Use only \verb|\section| and \verb|\subsection| commands, not
-\verb|\section*| or \verb|\subsection*|.
+\verb|\section*| or \verb|\subsection*|. Place the first section command 
+immediately after the abstract.
 
 The title of the article should be set with initial capitals, as in
 \texttt{\\title\{Drawing Diagrams with R\}}. Only the initial word of
@@ -363,7 +364,7 @@ Down &  3 & 4 \\
 A simple table with booktabs formatting.}
 \end{table}
 
-Figures should be submitted as PDF or PNG format files; other formats are not accepted.
+Figures should be submitted as PDF or PNG format files; no other formats are accepted.
 
 Variants of the figure and table environments that span the full width of the document are avialable: these are called \verb|widefigure| and \verb|widetable|.  Figures~\ref{fig:regular} and \ref{fig:wide} show the difference between the regular and wide figure variants.
 
@@ -394,7 +395,10 @@ package for citations.}. The citation in the first
 paragraph of this style guide is of the form
 \verb|\citep{ihaka:1996}|. Figure \ref{figure:bibexample}
 shows an example file called \file{example.bib} which contains
-a single reference. Note that inclusion of the DOI () bibtex field is desirable whenever a referenced item has a DOI; if \verb|doi| is used, \verb|url| should in general not be used.
+a single reference. Note that inclusion of the DOI bibtex field is 
+desirable whenever a referenced item has a DOI; recent practice prefers 
+\verb|url = {https://doi.org/...}| to \verb|doi = {...}|, to use secure 
+redirection.
 
 A bibliography is produced from \file{example.bib}
 by placing the following line in \file{yourfilename.tex}:
@@ -418,7 +422,7 @@ It is not necessary to include the \code{natbib} package or a bibliography style
   VOLUME = 5,
   NUMBER = 3,
   PAGES = {299--314},
-  DOI = {10.1080/10618600.1996.10474713}
+  URL = {https://doi.org/10.1080/10618600.1996.10474713}
 }
 \end{boxedverbatim}
 \caption{The contents of a file called \file{example.bib}.}
