--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -18,8 +18,9 @@ version to the handling editor.
    except for articles, conjunctions and prepositions).
 \item The author list should start with ``by''.
 \item The abstract should be created using the \verb+\abstract{}+
-   environment provided by the R Journal style file \texttt{RJournal.sty}.
-\item The abstract should not contain any references.
+   environment provided by the R Journal style file \texttt{RJournal.sty}; it
+   should preferably not contain any references; it should always be
+   followed by a section title.
 \item  Section and subsection titles should be in sentence case (i.e.\ only
    the first word and proper names capitalized)
 \item Use the \verb+\section+ and \verb+\subsection+ commands for sections and 
