--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -288,8 +288,8 @@ inside a title.
 
 Every article should include an abstract of no more than 150 words. The abstract
 is entered with the \verb|\abstract| command, and should appear immediately
-after \verb|\maketitle| at the beginning of the article. The abstract
-should not contain any citations or references.
+after \verb|\maketitle| at the beginning of the article. The abstract may
+contain references but should not contain mathematical markup.
 
 \subsection{Author information}
 
