add ORCiD possibility

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -301,13 +301,14 @@ immediately below). For example,
 \verb|\author{by Ross Ihaka and Robert Gentleman}|.
 
 The article should end with a signature block giving contact information
-for each author. For example
+for each author, which may contain an ORCiD iD. For example
 
 \begin{verbatim}
 \address{Paul Murrell\\
   Department of Statistics\\
   The University of Auckland\\
   New Zealand\\
+  ORCiD: 0000-0002-3224-8858\\
   \email{paul@stat.auckland.ac.nz}}
 \end{verbatim}  
 
