tidy submissions - now bundle template

--- a/share/RJreferences.bib
+++ b/share/RJreferences.bib
@@ -5,7 +5,7 @@
   address = {Vienna, Austria},
   year = {2016},
   note = {{ISBN} 3-900051-07-0},
-  url = {http://www.R-project.org/},
+  url = {https://www.R-project.org/},
 }
 
 @article{ihaka:1996,
@@ -16,5 +16,5 @@
 	Title = {R: A Language for Data Analysis and Graphics},
 	Volume = 5,
 	Year = 1996,
-        doi = {10.1080/10618600.1996.10474713}
+        url = {https://doi.org/10.1080/10618600.1996.10474713}
 }
