--- a/share/RJtemplate.tex
+++ b/share/RJtemplate.tex
@@ -8,16 +8,18 @@
 An abstract of less than 150 words.
 }
 
+\section{Section title in sentence case}
+
 Introductory section which may include references in parentheses
 \citep{R}, or cite a reference such as \citet{R} in the text.
 
-\section{Section title in sentence case}
+\section{Another section}
 
 This section may contain a figure such as Figure~\ref{figure:rlogo}.
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics{Rlogo}
+  \includegraphics{Rlogo-5}
   \caption{The logo of R.}
   \label{figure:rlogo}
 \end{figure}
@@ -33,24 +35,27 @@ There will likely be several sections, perhaps including code snippets, such as:
 
 \section{Summary}
 
-This file is only a basic article template. For full details of \emph{The R Journal} style and information on how to prepare your article for submission, see the \href{http://journal.r-project.org/share/author-guide.pdf}{Instructions for Authors}.
+This file is only a basic article template. For full details of \emph{The R Journal} style and information on how to prepare your article for submission, see the \href{https://journal.r-project.org/share/author-guide.pdf}{Instructions for Authors}.
 
 \bibliography{RJreferences}
 
 \address{Author One\\
   Affiliation\\
   Address\\
-  Country\\}
-\email{author1@work}
+  Country\\
+  (ORCiD if desired)\\
+  \email{author1@work}}
 
 \address{Author Two\\
   Affiliation\\
   Address\\
-  Country\\}
-\email{author2@work}
+  Country\\
+  (ORCiD if desired)\\
+  \email{author2@work}}
 
 \address{Author Three\\
   Affiliation\\
   Address\\
-  Country\\}
-\email{author3@work}
+  Country\\
+  (ORCiD if desired)\\
+  \email{author3@work}}
