--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -301,13 +301,14 @@ immediately below). For example,
 \verb|\author{by Ross Ihaka and Robert Gentleman}|.
 
 The article should end with a signature block giving contact information
-for each author. For example
+for each author, which may contain an ORCiD iD. For example
 
 \begin{verbatim}
 \address{Paul Murrell\\
   Department of Statistics\\
   The University of Auckland\\
   New Zealand\\
+  ORCiD: 0000-0002-3224-8858\\
   \email{paul@stat.auckland.ac.nz}}
 \end{verbatim}  
 
@@ -445,8 +446,7 @@ AUTHOR = {{The R Journal Editors}}
 \end{verbatim}
 Including the DOI of the reference is very desirable and may become 
 compulsory soon. It is good practice to cite CRAN and Bioconductor packages 
-mentioned in the article in the bibliography using \code{toBibtex(citation())} 
-to produce the required entry.
+mentioned in the article in the bibliography using \code{toBibtex(citation("pkg", auto=TRUE))} to produce the required entry; works in \code{toBibtex(citation("pkg"))} may be added.
 
 \subsection{Citing packages}
 
@@ -459,7 +459,8 @@ and need not be followed by a citation.
 
 The BibTeX entry for an R package should not use the \verb|\pkg|
 command to format the package name in the \code{TITLE} field, but should 
-be produced using \code{toBibtex(citation())}.
+be produced using \code{toBibtex(citation("pkg", auto=TRUE))}; works in 
+\code{toBibtex(citation("pkg"))} may be added.
 
 \subsection{Citing R}
 
