--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -29,7 +29,8 @@ version to the handling editor.
       sections will not be properly indexed in the PDF file if you use
       the starred versions.
 \item All authors must have an affiliation at the end of the article,
-      with the email address of at least the first author.
+      with the email address of at least the first author; the affiliation
+      blocks may contain per-author ORCiD iD strings.
 \end{itemize}
 
 \subsection*{Software markup and citation}
@@ -43,7 +44,9 @@ version to the handling editor.
   provides a hyper-link to the package homepage on CRAN. Similarly,
   the first mention of a Bioconductor package should be marked up with
   \verb+\BIOpkg+. It is also reasonable to cite most such packages in the
-  bibliography.
+  bibliography, for example produced using 
+  \verb+toBibtex(citation("pkg", auto=TRUE))+; works in 
+  \verb+toBibtex(citation("pkg"))+ may be added.
 \item Other than the above, names of R packages should be marked up with 
   \verb+\pkg+, including in the title (This ensures that the
   package name is correctly formatted in the table of contents).
