--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -1,10 +1,11 @@
 \documentclass[11pt]{article}
 \usepackage{a4wide}
+\usepackage{hyperref}
 \begin{document}
 
 \title{R Journal Proof-reading Check List}
 \author{by the R Journal Editors}
-\date{26 April 2017}
+\date{11 May 2017}
 \maketitle
 
 Your article has been accepted for publication in The R Journal. To
@@ -122,6 +123,9 @@ appearing in the text.  Class names should appear in double quotes.
 \begin{itemize}
 \item The bibliography should be created with BibTeX, and the BibTeX
   sources included in the submission.
+\item Bibliography entries should contain DOI where available, following: \url{https://www.crossref.org/display-guidelines/}, formatted
+  as \verb+url = {https://doi.org/<doi>}+.
+\item False given DOI formatted as above for article entries can be checked, and attempts to find unknown DOI values for article entries can be made using the \verb+check_doi()+ and \verb+find_doi()+ functions in the \verb+doi_helpers.R+ file at \url{https://journal.r-project.org/share/doi\_helpers.R}
 \item Bibliography entries should not contain any markup specific to
   The R Journal. For example, package names should not be marked up
   with \verb+\pkg+ in the bibliography.
