--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -111,7 +111,7 @@ and \file{RJournal.sty}.
 separated by hyphens, (e.g.\ \file{smith-jones.tex}). Replace its
 contents with the contents of your article.
 
-\item Create a \file{Yourlastname.bib} BibTeX file and add
+\item Create a minimal \file{Yourlastname.bib} BibTeX file with only the entries you need, without unnecessary fields such as abstracts, and add
 \verb|\bibliography{Yourlastname}| at the end of \file{Yourlastname.tex}.
 
 \item Modify \file{RJwrapper.tex} to include \file{yourname.tex} rather
@@ -397,9 +397,8 @@ paragraph of this style guide is of the form
 \verb|\citep{ihaka:1996}|. Figure \ref{figure:bibexample}
 shows an example file called \file{example.bib} which contains
 a single reference. Note that inclusion of the DOI bibtex field is 
-desirable whenever a referenced item has a DOI; recent practice prefers 
-\verb|url = {https://doi.org/...}| to \verb|doi = {...}|, to use secure 
-redirection.
+desirable whenever a referenced item has a DOI; recent practice requires that 
+\verb|url = {https://doi.org/...}| be used in preference to \verb|doi = {...}|, to use secure redirection.
 
 A bibliography is produced from \file{example.bib}
 by placing the following line in \file{yourfilename.tex}:
@@ -447,6 +446,8 @@ AUTHOR = {{The R Journal Editors}}
 Including the DOI of the reference is very desirable and may become 
 compulsory soon. It is good practice to cite CRAN and Bioconductor packages 
 mentioned in the article in the bibliography using \code{toBibtex(citation("pkg", auto=TRUE))} to produce the required entry; works in \code{toBibtex(citation("pkg"))} may be added.
+
+The BibTeX file should be minimal, that is should not numerous entries not cited in the submission, and the included entries should not contain unnecessary fields.
 
 \subsection{Citing packages}
 
