clarify file names

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -107,14 +107,14 @@ The steps involved in preparing an article for submission to \emph{The
 \item Download \file{RJwrapper.tex}, \file{RJtemplate.tex},
 and \file{RJournal.sty}.
 
-\item Rename \file{RJtemplate.tex} using the authors' last names in lower case 
-separated by hyphens, (e.g.\ \file{smith-jones.tex}). Replace its
+\item Rename \file{RJtemplate.tex} to a unique file name (\file{filename.tex}, e.g.\ \file{smith-jones.tex}), for example using the authors' last or family names in lower case 
+separated by hyphens, or the corresponding author's last or family name. Replace its
 contents with the contents of your article.
 
-\item Create a minimal \file{Yourlastname.bib} BibTeX file with only the entries you need, without unnecessary fields such as abstracts, and add
-\verb|\bibliography{Yourlastname}| at the end of \file{Yourlastname.tex}.
+\item Create a minimal \file{filename.bib} BibTeX file with only the entries you need, without unnecessary fields such as abstracts, and add
+\verb|\bibliography{filename}| at the end of \file{filename.tex}, where filename is the same file name created above.
 
-\item Modify \file{RJwrapper.tex} to include \file{yourname.tex} rather
+\item Modify \file{RJwrapper.tex} to include \file{filename.tex} rather
 than \file{RJtemplate.tex}. Include any strictly essential \LaTeX{} 
 \verb|\usepackage| commands in the modified \file{RJwrapper.tex}.
 
@@ -128,10 +128,10 @@ if necessary.
   \begin{itemize}
   \item The modified \file{RJwrapper.tex}
   \item \file{RJwrapper.pdf}
-  \item \file{yourname.tex}
-  \item \file{yourname.bib}
+  \item \file{filename.tex}
+  \item \file{filename.bib}
   \item all necessary figure files (only PDF or PNG files are accepted)
-  \item an R script permitting the reproduction of examples in your submission and small data files --- use built-in data sets where sensible, see below. 
+  \item an R script (\file{filename.R} using the same file name as that created above) permitting the reproduction of examples in your submission and small data files --- use built-in data sets where sensible, see below. 
   \item Do not include \file{RJournal.sty} or style files for other latex packages needed by your article.
   \end{itemize}
 \end{itemize}
@@ -401,12 +401,12 @@ desirable whenever a referenced item has a DOI; recent practice requires that
 \verb|url = {https://doi.org/...}| be used in preference to \verb|doi = {...}|, to use secure redirection. Do not use \verb+url+ fields to link to publishers if a DOI is available; all links for entries with DOIs must be through the DOI key formatted as \verb|url = {https://doi.org/<DOI key>}|.
 
 A bibliography is produced from \file{example.bib}
-by placing the following line in \file{yourfilename.tex}:
+by placing the following line in \file{filename.tex}:
 \begin{verbatim}
-\bibliography{yourfilename}
+\bibliography{filename}
 \end{verbatim}
 and running \code{pdflatex} then \code{bibtex} on the file
-\file{yourfilename.tex}, then running \code{pdflatex} as many times as
+\file{filename.tex}, then running \code{pdflatex} as many times as
 necessary until \LaTeX{} stops complaining about undefined citations.  In R, you can use \code{tools::texi2pdf()} to automate this process, as this is what is used in production.
 
 It is not necessary to include the \code{natbib} package or a bibliography style: these are included in the RJournal style file.
@@ -510,6 +510,8 @@ prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
 \item v0.14 2017/01/09 --- Revised Introduction to adapt classes of solicited submissions to changing needs and high submission volumes of single package articles. Added hooks for licence and plagiarism.
 
 \item v0.15 2017/04/26 --- Added explicit need for citation of packages also in the bibliography.
+
+\item v0.16 2017/08/14 --- Clarified file naming conventions for submission.
 
 \end{itemize}
 
