add motivating letter for add-ons

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -52,7 +52,7 @@ from January 2017 submitted articles may include:
 
 \item \emph{Applications}: demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.
 
-\item \emph{Add-on packages}: short introductions to contributed R packages that are already available on CRAN or Bioconductor, and going beyond package vignettes in aiming to provide broader context and to attract a wider readership than package users. Authors need to make a strong case for such introductions, based for example on novelty in implementation and use of R, or the introduction of new data structures representing general architectures that invite re-use. Authors of narrower package-introduction articles may wish to consider alternatives such as The Journal of Open Source Software (\url{http://joss.theoj.org/}) or in the life sciences, the F1000 Bioconductor (\url{https://f1000research.com/channels/bioconductor}) or Rpackage (\url{https://f1000research.com/channels/rpackage}) channels.
+\item \label{add-on-req}\emph{Add-on packages}: short introductions to contributed R packages that are already available on CRAN or Bioconductor, and going beyond package vignettes in aiming to provide broader context and to attract a wider readership than package users. Authors need to make a strong case (in a motivating letter accompanying a submission) for such introductions, based for example on novelty in implementation and use of R, or the introduction of new data structures representing general architectures that invite re-use. Authors of narrower package-introduction articles may wish to consider alternatives such as The Journal of Open Source Software (\url{http://joss.theoj.org/}) or in the life sciences, the F1000 Bioconductor (\url{https://f1000research.com/channels/bioconductor}) or Rpackage (\url{https://f1000research.com/channels/rpackage}) channels.
 
 \end{itemize}
 
@@ -126,6 +126,7 @@ if necessary.
 
 \item Then submit the following files to the Editor-in-Chief:
   \begin{itemize}
+  \item If the submission is of the ``add-on packages'' type, a motivating letter explaining how you meet our requirements described above (\ref{add-on-req}).
   \item The modified \file{RJwrapper.tex}
   \item \file{RJwrapper.pdf}
   \item \file{filename.tex}
