tightening style file version

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -104,8 +104,7 @@ The steps involved in preparing an article for submission to \emph{The
 
 \begin{itemize}
 
-\item Download \file{RJwrapper.tex}, \file{RJtemplate.tex},
-and \file{RJournal.sty}.
+\item Download \href{https://journal.r-project.org/share/RJtemplate.zip}{\file{RJtemplate.zip}} which contains the latest versions of \file{RJwrapper.tex}, \file{RJtemplate.tex}, \file{RJournal.sty} and other useful files.
 
 \item Rename \file{RJtemplate.tex} to a unique file name (\file{filename.tex}, e.g.\ \file{smith-jones.tex}), for example using the authors' last or family names in lower case 
 separated by hyphens, or the corresponding author's last or family name. Replace its
