user: follow directions exactly

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -82,6 +82,11 @@ to prepare a submission for \emph{The R Journal}.
 
 \section{Preparing a submission}
 
+\textbf{Please note carefully:} The journal's production software is
+rather unforgiving.  Failure to adhere to the instructions here may
+result in a delay to the reviewing, and possible publication, of your
+article.
+
 The following files provide a template for preparing an article for submission
 to \emph{The R Journal}:
 
