--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -82,10 +82,15 @@ to prepare a submission for \emph{The R Journal}.
 
 \section{Preparing a submission}
 
-\textbf{Please note carefully:} The journal's production software is
-rather unforgiving.  Failure to adhere to the instructions here may
-result in a delay to the reviewing, and possible publication, of your
-article.
+\textbf{PLEASE NOTE CAREFULLY:} 
+
+\begin{quote}
+
+The journal's production software is rather unforgiving.  Failure to
+adhere to the instructions here may result in a delay to the reviewing,
+and possible publication, of your article.
+
+\end{quote}
 
 The following files provide a template for preparing an article for submission
 to \emph{The R Journal}:
@@ -138,6 +143,8 @@ if necessary.
   \item all necessary figure files (only PDF or PNG files are accepted)
   \item an R script (\file{filename.R} using the same file name as that created above) permitting the reproduction of examples in your submission and small data files --- use built-in data sets where sensible, see below. 
   \item Do not include \file{RJournal.sty} or style files for other latex packages needed by your article.
+  \item You should have only one \file{.bib} file, and only two
+  \file{.tex} files, one of which is \file{RJwrapper.tex}.  
   \end{itemize}
 \end{itemize}
 
@@ -517,6 +524,10 @@ prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
 \item v0.15 2017/04/26 --- Added explicit need for citation of packages also in the bibliography.
 
 \item v0.16 2017/08/14 --- Clarified file naming conventions for submission.
+
+\item v0.16 2019/08/26 --- Noted importance of strictly following the
+above rules, and stated there must be only one \file{.bib}, and only one
+\file{.tex} file other than \file{RJwrapper.tex}.
 
 \end{itemize}
 
