easier to find author preamble

--- a/share/RJwrapper.tex
+++ b/share/RJwrapper.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath,amssymb,array}
 \usepackage{booktabs}
 
-%% load any required packages here
+%% load any required packages FOLLOWING this line
 
 \begin{document}
 
