no .docx please

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -135,7 +135,9 @@ if necessary.
 
 \item Then submit the following files to the Editor-in-Chief:
   \begin{itemize}
-  \item If the submission is of the ``add-on packages'' type, a motivating letter explaining how you meet our requirements described above (\ref{add-on-req}).
+  \item If the submission is of the ``add-on packages'' type, a motivating letter 
+  (PDF or plain text, please) explaining how you meet our requirements described 
+  above (\ref{add-on-req}).
   \item The modified \file{RJwrapper.tex}
   \item \file{RJwrapper.pdf}
   \item \file{filename.tex}
