--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -150,6 +150,12 @@ if necessary.
   \end{itemize}
 \end{itemize}
 
+\textit{Article length:} The \emph{R Journal} has no page limit.
+However, there is a tendency for longer papers to be subject to longer
+reviewing time, and excessive length may reduce your article's
+readership, should it be published.  If possible, try to limit your
+article's length to, say, 10 pages, excluding figures and bibliography.
+
 \section{Reproducible research}
 
 The results presented in figures and tables should be reproducible:
@@ -530,6 +536,8 @@ prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
 \item v0.16 2019/08/26 --- Noted importance of strictly following the
 above rules, and stated there must be only one \file{.bib}, and only one
 \file{.tex} file other than \file{RJwrapper.tex}.
+
+\item v0.17 2019/09/07 --- Added a comment about article length.
 
 \end{itemize}
 
