added comment on datasets

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -154,7 +154,7 @@ if necessary.
 However, there is a tendency for longer papers to be subject to longer
 reviewing time, and excessive length may reduce your article's
 readership, should it be published.  If possible, try to limit your
-article's length to, say, 10 pages, excluding figures and bibliography.
+article's length to, say, 8-10 pages, excluding figures and bibliography.
 
 \section{Reproducible research}
 
@@ -164,6 +164,11 @@ listing in the article, or a separate script file that generates the
 results should be submitted with the article. Articles that include
 extensive code listings should also provide a script file to help
 reviewers step through the code without retyping it.
+
+Note that reproducibility requires that the author provide any datasets
+used in the examples.  If this would be infeasible, due to data privacy
+or data volume considerations, please do not use such datasets as
+examples. 
 
 \section{Language}
 
@@ -538,6 +543,9 @@ above rules, and stated there must be only one \file{.bib}, and only one
 \file{.tex} file other than \file{RJwrapper.tex}.
 
 \item v0.17 2019/09/07 --- Added a comment about article length.
+
+\item v0.17 2019/09/11 --- Added a comment about need to provide
+datasets.
 
 \end{itemize}
 
