--- a/_articles/RJ-2020-027/RJ-2020-027.Rmd
+++ b/_articles/RJ-2020-027/RJ-2020-027.Rmd
@@ -28,7 +28,7 @@ author:
 date: 2019-07-18
 creative_commons: CC BY
 output:
-  rjtools::rjournal_article:
+  distill::distill_article:
     self_contained: false
 ---
 
