Add contents for example 2020-1 issue page

--- a/_issues/2020-1/2020-1.Rmd
+++ b/_issues/2020-1/2020-1.Rmd
@@ -1,17 +1,30 @@
 ---
-title: "Volume 12/2, December 2020"
+title: "Volume 12/1, June 2020"
 draft: false
-base_url: ???
-date: 2020-12-01
+date: 2020-06-01
 output:
   rjtools::rjournal_article:
     self_contained: false
 ---
 
 [Complete issue `r icon::fontawesome$solid$"file-pdf"`](RJ-2020-2.pdf)
+
 [Complete bibliography](https://rjournal.github.io/archive/2020-2/index-bib.html)
 
 Access the article landing page through its title or go straight to the article through the PDF icon:
 
 ## Table of contents
+
+```{r, results = "asis", echo = FALSE}
+articles <- yaml::read_yaml("2020-1.yml")$articles
+contents <- lapply(articles, function(x) {
+  if(!is.null(x$heading)) {
+    return(paste("\n\n###", x$heading))
+  }
+  stringr::str_glue(
+"[{x$title}](#)<br>{glue::glue_collapse(x$author, sep = ', ', last = ' and ')} {x$pages[1]}\n\n")
+})
+
+cat(do.call(c, contents), sep = "\n")
+```
 
