--- a/issues.Rmd
+++ b/issues.Rmd
@@ -2,10 +2,5 @@
 title: "Previous issues"
 description: |
   Archive of previous issues published by The R Journal
+listing: issues
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
-
-TODO
