Extend metadata for sample article

--- a/_articles/RJ-2020-027/RJ-2020-027.Rmd
+++ b/_articles/RJ-2020-027/RJ-2020-027.Rmd
@@ -19,7 +19,15 @@ description: |
       manual            tour is applied particle physics data to illustrate the sensitivity
       of structure in a projection to specific            variable contributions.
 draft: false
-base_url: ???
+journal:
+  title: "{The R Journal}"
+  firstpage: 6
+  lastpage: 19
+volume: 12
+issue: 2
+citation_url: "https://doi.org/10.32614/RJ-2020-027"
+doi: "10.32614/RJ-2020-027"
+slug: "RJ-2020-027"
 author:
   - name: Nicholas Spyrison
     affiliation: Monash University
@@ -28,7 +36,7 @@ author:
 date: 2019-07-18
 creative_commons: CC BY
 output:
-  rjtools::rjournal_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
