Tweak issue display

--- a/_issues/2020-1/2020-1.Rmd
+++ b/_issues/2020-1/2020-1.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "Volume 12/1, June 2020"
+title: "Volume 12/1"
 draft: false
 date: 2020-06-01
 output:
-  rjtools::rjournal_article:
+  distill::distill_article:
     self_contained: false
 ---
 
-[Complete issue `r icon::fontawesome$solid$"file-pdf"`](RJ-2020-2.pdf)
+[Complete issue `r icons::fontawesome$solid$"file-pdf"`](RJ-2020-2.pdf)
 
 [Complete bibliography](https://rjournal.github.io/archive/2020-2/index-bib.html)
 
