--- a/issues.Rmd
+++ b/issues.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Previous issues"
+title: "All issues"
 description: |
-  Archive of previous issues published by The R Journal
+  Archive of all issues published by The R Journal
 listing: issues
 ---
