--- a/_articles/RJ-2020-027/RJ-2020-027.Rmd
+++ b/_articles/RJ-2020-027/RJ-2020-027.Rmd
@@ -1,23 +1,23 @@
 ---
 title: "spinifex: An R Package for Creating a Manual Tour of Low-dimensional Projections
       of Multivariate Data"
-description: |
-      Dynamic low-dimensional linear projections of multivariate
-      data collectively known as tours            provide an important tool for exploring
-      multivariate data and models. The R package tourr provides            functions
-      for several types of tours: grand, guided, little, local and frozen. Each of
-      these can be viewed            dynamically, or saved into a data object for
-      animation. This paper describes a new package, spinifex,            which provides
-      a manual tour of multivariate data where the projection coefficient of a single
-      variable            is controlled. The variable is rotated fully into the projection,
-      or completely out of the projection. The            resulting sequence of projections
-      can be displayed as an animation, with functions from either the            plotly
-      or gganimate packages. By varying the coefficient of a single variable, it is
-      possible to explore            the sensitivity of structure in the projection
-      to that variable. This is particularly useful when used            with a projection
-      pursuit guided tour to simplify and understand the solution. The use of the
-      manual            tour is applied particle physics data to illustrate the sensitivity
-      of structure in a projection to specific            variable contributions.
+abstract: |
+  Dynamic low-dimensional linear projections of multivariate
+  data collectively known as tours provide an important tool for exploring
+  multivariate data and models. The R package tourr provides functions
+  for several types of tours: grand, guided, little, local and frozen. Each of
+  these can be viewed dynamically, or saved into a data object for
+  animation. This paper describes a new package, spinifex, which provides
+  a manual tour of multivariate data where the projection coefficient of a single
+  variable is controlled. The variable is rotated fully into the projection,
+  or completely out of the projection. The resulting sequence of projections
+  can be displayed as an animation, with functions from either the plotly
+  or gganimate packages. By varying the coefficient of a single variable, it is
+  possible to explore the sensitivity of structure in the projection
+  to that variable. This is particularly useful when used with a projection
+  pursuit guided tour to simplify and understand the solution. The use of the
+  manual tour is applied particle physics data to illustrate the sensitivity
+  of structure in a projection to specific variable contributions.
 draft: false
 journal:
   title: "{The R Journal}"
@@ -36,11 +36,19 @@ author:
 date: 2019-07-18
 creative_commons: CC BY
 output:
-  rjtools::rjournal_web_article:
+  distill::distill_article:
     self_contained: false
+    toc: false
 ---
 
-<object data="RJ-2020-027.pdf" type="application/pdf" style="height:955px">
-    <iframe src="RJ-2020-027.pdf"></iframe>
-</object>
+```{css, echo = FALSE}
+d-title h1, d-title p, d-title figure {
+  grid-column: page;
+}
+```
 
+<div class="l-page">
+  <object data="RJ-2020-027.pdf" type="application/pdf" style="height:955px;width:100%">
+    <iframe src="RJ-2020-027.pdf"></iframe>
+  </object>
+</div>
